--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@react-three/drei": "^9.108.3",
     "@react-three/fiber": "^8.16.8",
     "@tabler/icons-react": "^3.6.0",
+    "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "mini-svg-data-uri": "^1.4.4",
